Resolves: tdf#87663 update checker tries to add icon to toc preview toolbar

i.e. CRASH when attempting to add ToC to document if the updatechecker fires
while this dialog is activating/active because the preview has hidden menubars
which have no associated window

Change-Id: I45a254dba647910d7743f6d8173c2547dd82c791